<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <com.denzcoskun.imageslider.ImageSlider
            android:id="@+id/slider"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_margin="20dp"
            android:layout_marginTop="16dp"
            app:iss_auto_cycle="true"
            app:iss_corner_radius="20"
            app:iss_error_image="@drawable/image_not_available"
            app:iss_period="3000"
            app:iss_placeholder="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btnFav"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="293dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="100"
            android:backgroundTint="@color/cardview_shadow_end_color"
            android:minHeight="48dp"
            app:layout_constraintBottom_toBottomOf="@+id/slider"
            app:layout_constraintEnd_toEndOf="@+id/slider"
            app:layout_constraintStart_toStartOf="@+id/slider"
            app:layout_constraintTop_toTopOf="@+id/slider"
            app:layout_constraintVertical_bias="0.956"
            app:srcCompat="@drawable/ic_baseline_favorite_border_24" />


        <ImageButton
            android:id="@+id/btnAddImage"
            android:layout_width="70dp"
            android:layout_height="35dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_weight="100"
            android:backgroundTint="#FFFFFF"
            android:minHeight="48dp"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/recyclerView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.917"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@android:drawable/ic_menu_add" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="20dp"
            android:fillViewport="true"
            android:orientation="vertical"
            android:scrollbars="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/slider" >

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="183dp"
            android:layout_margin="16dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/textMemorias"
            android:layout_width="272dp"
            android:layout_height="64dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="Dale fav y a guardar recuerdos!"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnAddImage"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>