<resources>
    <string name="app_name">WIP</string>
    <string name="error">Ha ocurrido un error inexperado</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="buscar">Buscar</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_record">Memories</string>
    <string name="no_details">No hay detalles de la fiesta seleccionada</string>
    <string name="imagen_de_la_fiesta">Imagen de la fiesta</string>
    <string name="no_province">Toda la comunidad</string>
    <string name="image_uploaded_default_title">Escribe aquí un título</string>
    <string name="add_favourite_label">Añadida a favoritas!</string>
    <string name="delete_saved_party_label">Eliminada de fiestas favoritas</string>

</resources>